fix semester filter styles on mobile

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -90,7 +90,7 @@
   color: var(--black);
   display: flex;
   text-decoration: none;
-  @include media('>tablet') {
+  @include media('>=tablet') {
     min-height: 555px;
   }
 }
